20101127
	emu/port/*ip*.[ch] and emu/Nt/ipif*.c updated with new interface for ipv6 support [mechiel] [issue 193]
	emu/Linux/os.c address compilation warnings (setfcr etc still to do)
20101125
	asm/assem.c don't attempt to use missing src (issue 243)
20100925
	appl/lib/w3c/uris.b - handle existing Unicode characters if they happen not to have been encoded into string
	appl/svc/httpd/parser.b - similar [response to issue 233]
20100914
	emu/Nt/os.c - replace trap handling
20100822
	correct handling of mouse focus in sub-widgets of widget windowed in text [issue 241]
	add various warnings to mkfile-Linux-386
20100821
	correct handling of mouse focus in sub-widgets of widget windowed in canvas [issue 241]
20100819
	failed to push Solaris/sparc/include/lib9.h with u64int change [issue 151]
	appl/cmd/ar.b eliminate false error return
20100810
	initial introduction of crypt-*(2) and ipints(2)
	replace keyring.m in module/runt.m by ipints.m and crypt.m; compensate in libinterp and libkeyring by using keyringif.m to generate Keyring's interface
20100802
	various changes held back by accident, notably stackv in stack(1), better diagnostics by cat(1)
20100801
	libtk/coval.c - simplify vlong expression for some compilers [issue 216, mechiel]
20100727
	on Linux and MacOSX, look at faulting address to decide if it's dereference of nil
20100722
	include/bio.h add varargck and repair resulting diagnostics in utils and limbo/ [issue 237, mechiel]
20100719
	appl/cmd/disk/mkfs.b change getname/getpath to cope with missing newline [issue 236]
20100715
	appl/wm/toolbar.b changed not to create new /chan/snarf if one exists, unless -p (private) option given [toolbar(1)]
	utils/cc/macbody - add overlooked change to implement __VA_ARGS__
	other minor updates to the compilers to resync
20100714
	correctly initialise types in utils/cc/sub.c
20100504
	change lib9/strtoull.c for MS
20100503
	updated libmach/8db.c to avoid [] initialisers
20100501
	update libmach to compensate for MS compiler